[OTA-2323] scroll bar overflow fix

--- a/ota-plus-web/app/reactapp/style/ota-default/pages/_page-get-started.scss
+++ b/ota-plus-web/app/reactapp/style/ota-default/pages/_page-get-started.scss
@@ -5,7 +5,7 @@
 
 #page-get-started {
   overflow-y: auto;
-  height: 100%;
+  height: calc(100% - 50px);
   .get-started-header {
     padding: 0 200px;
     height: 40vh;
